Closed
Bug 1903169
Opened 1 year ago
Closed 1 year ago
Crash in [@ mozilla::dom::quota::DropDirectoryLock]
Categories
(Core :: Storage: Quota Manager, defect, P1)
Tracking
()
RESOLVED
FIXED
129 Branch
Tracking | Status | |
---|---|---|
firefox-esr115 | --- | unaffected |
firefox-esr128 | --- | unaffected |
firefox127 | --- | unaffected |
firefox128 | --- | unaffected |
firefox129 | --- | fixed |
People
(Reporter: release-mgmt-account-bot, Assigned: janv)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: crash, regression)
Crash Data
Attachments
(1 file)
Crash report: https://crash-stats.mozilla.org/report/index/7ad28bc2-3c2b-47f0-9f7d-672f30240615
Reason: EXCEPTION_ACCESS_VIOLATION_READ
Top 10 frames of crashing thread:
0 xul.dll mozilla::dom::quota::DropDirectoryLock dom/quota/DirectoryLockInlines.h:32
0 xul.dll mozilla::dom::indexedDB:: dom/indexedDB/ActorsParent.cpp:16740
1 xul.dll mozilla::dom::indexedDB:: const dom/indexedDB/ActorsParent.cpp:14896
1 xul.dll mozilla::dom::indexedDB:: dom/indexedDB/ActorsParent.cpp:14907
2 xul.dll nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:1198
2 xul.dll NS_ProcessNextEvent xpcom/threads/nsThreadUtils.cpp:480
3 xul.dll mozilla::ipc::MessagePumpForNonMainThreads::Run ipc/glue/MessagePump.cpp:300
4 xul.dll MessageLoop::RunInternal ipc/chromium/src/base/message_loop.cc:370
4 xul.dll MessageLoop::RunHandler ipc/chromium/src/base/message_loop.cc:363
5 xul.dll MessageLoop::Run ipc/chromium/src/base/message_loop.cc:345
By querying Nightly crashes reported within the last 2 months, here are some insights about the signature:
- First crash report: 2024-06-15
- Process type: Parent
- Is startup crash: No
- Has user comments: No
- Is null crash: Yes - all crashes happened on null or near null memory address
By analyzing the backtrace, the regression may have been introduced by a patch [1] to fix Bug 1883353.
[1] https://hg.mozilla.org/mozilla-central/rev?node=dca9f407ea90
:janv, since you are the author of the potential regressor, could you please take a look?
Flags: needinfo?(jvarga)
Assignee | ||
Updated•1 year ago
|
Assignee: nobody → jvarga
Severity: -- → S3
Status: NEW → ASSIGNED
Flags: needinfo?(jvarga)
Priority: -- → P1
Reporter | ||
Comment 1•1 year ago
|
||
Set release status flags based on info from the regressing bug 1883353
status-firefox127:
--- → unaffected
status-firefox128:
--- → unaffected
status-firefox-esr115:
--- → unaffected
Assignee | ||
Comment 2•1 year ago
|
||
Pushed by jvarga@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/74b39df74a4a
Drop directory lock only when GetDatabasesOp owns one; r=dom-storage-reviewers,aiunusov
Comment 4•1 year ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 129 Branch
Assignee | ||
Updated•1 year ago
|
Crash Signature: [@ mozilla::dom::quota::DropDirectoryLock] → [@ mozilla::dom::quota::DropDirectoryLock]
[@ mozilla::dom::quota::DropDirectoryLock<T>]
Reporter | ||
Comment 6•11 months ago
|
||
Set release status flags based on info from the regressing bug 1883353
status-firefox-esr128:
--- → unaffected
You need to log in
before you can comment on or make changes to this bug.
Description
•