Bug 1903169 - Drop directory lock only when GetDatabasesOp owns one; r=dom-storage-reviewers,aiunusov

Differential Revision: https://phabricator.services.mozilla.com/D214070